--- a/Sawoodamo.UI/src/index.html
+++ b/Sawoodamo.UI/src/index.html
@@ -6,6 +6,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="preconnect" href="https://sawoodamo.s3.eu-central-1.amazonaws.com">
 </head>
 <body>
   <app-root></app-root>
